# crewai-groq-demo

./: .env.example  .gitignore  README.md  app.py  crew_logic.py  main.py  pyproject.toml
crewai_groq_demo/: cost.py  crew.py  exceptions.py  models.py  settings.py  structured_output.py
crewai_groq_demo/config/: agents.yaml  tasks.yaml
crewai_groq_demo/tools/: counting_tavily_search_tool.py
tests/: conftest.py  test_cost.py  test_counting_tavily_search_tool.py  test_crew_agent_iteration_limits.py  test_crew_builder.py  test_crew_market_analysis.py  test_crew_rate_limit_parsing.py  test_crew_research_retry.py  test_crew_structured_output_retry.py  test_crew_teaching_and_project.py  test_exceptions.py  test_models.py  test_settings.py  test_structured_output.py
